# src/swagger.json
@@ -525,6 +525,16 @@
 					},
 					"204": {
 						"description": "No content"
+					},
+					"500": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/MessageResponse"
+								}
+							}
+						}
 					}
 				},
 				"tags": [
